argo/apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: data
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: movies
        persistentVolumeClaim:
          claimName: nfs-movies
      - name: data
        persistentVolumeClaim:
          claimName: nfs-downloads
